# SamsungPy-Tauri

./: .gitignore  README.md  SamsungMDCDashboard.spec  TAILSCALE_FLOW_RUNBOOK.md  TODO.md  auth_gate.py  auth_password.txt  build_exe.bat  dashboard.py  launch_dashboard.py  requirements.txt  saved_devices.json  updater.py
.github/workflows/: build-windows.yml  release-windows.yml
tauri-app/: .env.production  .env.production.example  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
tauri-app/py/: bridge.py  export_cli_catalog.py  option_b_agent.py  web_backend.py
tauri-app/src/: cli_catalog.json  main.js  styles.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src-tauri/windows/: installer-hooks.nsh
