[package]
name = "samsung_mdc_tauri"
version = "1.0.5"
description = "Samsung Hybrid Control in Tauri"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
dirs = "5"
